2008-08-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* MANIFEST
	* xs_files-2.14
	* t/GtkShow.t
	* xs/GtkShow.xs: Wrap gtk_show_uri.

	* t/01.GtkWindow.t
	* xs/GtkWindow.xs: Wrap gtk_window_get_default_widget and
	gtk_window_group_list_windows.

	* t/GtkWidget.t
	* xs/GtkWidget.xs: Wrap gtk_widget_get_snapshot.

	* MANIFEST
	* maps-2.14
	* xs_files-2.14
	* t/GtkToolShell.t
	* xs/GtkToolShell.xs: Wrap GtkToolShell.

	* t/GtkToolItem.t
	* xs/GtkToolItem.xs: Wrap gtk_tool_item_toolbar_reconfigured.

	* t/GtkTooltip.t
	* xs/GtkTooltip.xs: Wrap gtk_tooltip_set_icon_from_icon_name.

	* t/GtkStatusIcon.t
	* xs/GtkStatusIcon.xs: Wrap gtk_status_icon_get_x11_window_id.

2008-08-15  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkSocket-GtkPlug.t
	* xs/GtkSocket.xs: Wrap gtk_socket_get_plug_window.

	* t/GtkScaleButton.t
	* xs/GtkScaleButton.xs: Wrap gtk_scale_button_get_popup,
	gtk_scale_button_get_plus_button, and
	gtk_scale_button_get_minus_button.

	* t/GtkPrintSettings.t
	* xs/GtkPrintSettings.xs: Wrap gtk_print_settings_load_file and
	gtk_print_settings_load_key_file.

	* t/GtkPageSetup.t
	* xs/GtkPageSetup.xs: Wrap gtk_page_setup_load_file and
	gtk_page_setup_load_key_file.

	* t/GtkIconTheme.t
	* xs/GtkIconTheme.xs: Wrap gtk_icon_info_new_for_pixbuf.

	* t/GtkLayout.t
	* xs/GtkLayout.xs: Use gtk_layout_get_bin_window if available to
	implement Gtk2::Layout->get_bin_window.  Deprecate
	Gtk2::Layout->bin_window.

2008-08-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkFontSelection.t
	* xs/GtkFontSelection.xs: Wrap gtk_font_selection_get_face,
	gtk_font_selection_get_face_list, gtk_font_selection_get_family,
	gtk_font_selection_get_family_list,
	gtk_font_selection_get_preview_entry, gtk_font_selection_get_size,
	gtk_font_selection_get_size_entry, and
	gtk_font_selection_get_size_list.  Use
	gtk_font_selection_dialog_get_ok_button,
	gtk_font_selection_dialog_get_apply_button, and
	gtk_font_selection_dialog_get_cancel_button if available to