@@ -1,5 +1,13 @@
 2008-08-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
+	* t/GtkClipboard.t
+	* xs/GtkSelection.xs: Use gtk_selection_data_get_target,
+	gtk_selection_data_get_data_type, gtk_selection_data_get_format,
+	gtk_selection_data_get_data, and gtk_selection_data_get_display if
+	available to implement the accessors
+	Gtk2::SelectionData->get_[thing].  Deprecate
+	Gtk2::SelectionData->[thing].
+
 	* MANIFEST
 	* xs_files-2.14
 	* t/GtkShow.t
